Remove other unecessary files + add gulpfile for swagger generation
